@@ -5,10 +5,10 @@ projectId=269024
 github_project=McJtyMods/LostCities
 
 
-mcp_mappings=20201028-1.16.3
+mcp_mappings=20210309-1.16.5
 minecraft_version=1.16.5
-forge_version=36.0.22
+forge_version=36.1.13
 
 jei_version=1.16.2:7.1.1.15
 waila_version=1.8.23-B38_1.12
-top_version=1.16:1.16-3.0.3-beta-6
+top_version=1.16:1.16-3.0.8-14
