@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a problem with creation of multiple worlds where the settings of the first world would persist for future worlds. This also fixes the saving of the selected profile in serverconfig/lostcities-server.toml
+
 1.16-4.0.7-beta:
 - Fixed loot and spawner generation so that it happens more consistently now
 
